--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
           context: ./Global-Argo/src/ # Path to the Dockerfile and build context
           push: true
           tags: |
-           rivi45010/app-node:${{ github.sha }}
+           rivi45010/rivi:${{ github.sha }}
 
       - name: Logout from Docker Hub
         run: docker logout
