--- a/last-boss/app-new.yaml
+++ b/last-boss/app-new.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: app-node
-      image: dinghy123/app-node:latest-09
+      image: dinghy123/app-node:last-chance
       ports:
         - containerPort: 3000
 ---
